Fixed dropdown menu spacing

--- a/css/style.css
+++ b/css/style.css
@@ -12,3 +12,7 @@ body {
 .content ul {
 	padding-left: 20px;
 }
+
+.top-bar-section .dropdown li a {
+	padding-top: 15px;
+}
